feat: google map, map component, settings components

--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -12,7 +12,7 @@
             <img src="/assets/img/map.png" alt=""> 
     </div>
     <div class="innerBtns">
-        <button class="normal-btn" (mousedown)="navTo('')">
+        <button class="normal-btn" (mousedown)="navTo('map')">
             Camp map
         </button>
         <button class="normal-btn" (mousedown)="navTo('')">
