--- a/src/app/tab-bar/tab-bar.component.html
+++ b/src/app/tab-bar/tab-bar.component.html
@@ -2,7 +2,7 @@
     <div class="tab-btn" (mousedown)="navToHome()">
         <img src="/assets/tab-icons/home.png" alt="">
     </div>
-    <div class="tab-btn">
+    <div class="tab-btn" (mousedown)="navToProfile()">
         <img src="/assets/tab-icons/user.png" alt="">
     </div><div class="tab-btn">
         <img src="/assets/tab-icons/statistics.png" alt="" (mousedown)="navTo('reports')">
