--- a/src/app/home/map/map.component.html
+++ b/src/app/home/map/map.component.html
@@ -1,6 +1,6 @@
 <!-- <div *ngIf="apiLoaded | async"> -->
     <google-map height="100vh" width="100vw" [center]="center" [zoom]="zoom" (mapClick)="addMarker($event)">
-        <map-marker *ngFor="let markerPosition of markerPositions" [position]="markerPosition"
+        <map-marker (mapClick)="goToLocation()" *ngFor="let markerPosition of markerPositions" [position]="markerPosition"
             [options]="markerOptions"></map-marker>
     </google-map>
 <!-- </div> -->
