chore: logout in client, profile islogged in

--- a/src/app/tab-bar/tab-bar.component.html
+++ b/src/app/tab-bar/tab-bar.component.html
@@ -9,6 +9,6 @@
     </div><div class="tab-btn">
         <img src="/assets/tab-icons/location.png" alt="" (mousedown)="navToMap()">
     </div><div class="tab-btn">
-        <img src="/assets/tab-icons/logout.png" alt="">
+        <img src="/assets/tab-icons/logout.png" alt="" (mousedown)="logout()">
     </div>
 </div>
