--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,24 +2,23 @@
 <div class="main-content">
     <div class="menu-btn" (mousedown)="goTo('awareness')">
         <img src="/assets/img/awareness.png" alt="" class="icon">
-        <p>Awareness</p>
+        <p>{{'Awareness'|text}}</p>
     </div>
     <div class="menu-btn" (mousedown)="goTo('reports')">
-        <img src="/assets/img/report.png"  alt="" class="icon">
-        <p>Reports</p>
+        <img src="/assets/img/report.png" alt="" class="icon">
+        <p>{{'Reports'|text}}</p>
     </div>
     <div class="menu-btn" (mousedown)="goTo('bens')">
         <img src="/assets/img/beneficiary.png" alt="" class="icon">
-        <p>BENs</p>
+        <p>{{'BENs'|text}}</p>
     </div>
     <div class="menu-btn" (mousedown)="goTo('complaints')">
-        <img src="/assets/img/complaints.png"  alt="" class="icon">
-        <p>Complaints</p>
+        <img src="/assets/img/complaints.png" alt="" class="icon">
+        <p>{{'Complaints'|text}}</p>
     </div>
     <div class="menu-btn" (mousedown)="goTo('about')">
         <img src="/assets/img/info.png" alt="" class="icon">
-        <p>About Watan</p>
+        <p>{{'About Watan'|text}}</p>
     </div>
 </div>
 <div class="white-space"></div>
-
