--- a/src/app/home/reports/number-of-bens/number-of-bens.component.html
+++ b/src/app/home/reports/number-of-bens/number-of-bens.component.html
@@ -1,40 +1,40 @@
 <div class="header">
-<h1>Number of benenficires</h1>
+<h1>{{'Number of benenficires' | text}}</h1>
     
 </div>
 <div class="wrappar">
     <div class="details">
         <div class="line">
-            <div class="left">ofTent:</div>
-            <div class="right"> {{data.ofTent}}</div>
+            <div class="left">{{'ofTent' | text}}:</div>
+            <div class="right"> {{data.ofTent |text}}</div>
         </div>
         <div class="line">
-            <div class="left">HHs:</div>
-            <div class="right"> {{data.HHs}}</div>
+            <div class="left">{{'HHs' | text}}:</div>
+            <div class="right"> {{data.HHs |text}}</div>
         </div>
         <div class="line">
-            <div class="left">men:</div>
-            <div class="right"> {{data.men}}</div>
+            <div class="left">{{'men' | text}}:</div>
+            <div class="right"> {{data.men |text}}</div>
         </div>
         <div class="line">
-            <div class="left">women:</div>
-            <div class="right"> {{data.women}}</div>
+            <div class="left">{{'women' | text}}:</div>
+            <div class="right"> {{data.women |text}}</div>
         </div>
         <div class="line">
-            <div class="left">boys:</div>
-            <div class="right"> {{data.boys}}</div>
+            <div class="left">{{'boys'|text}}:</div>
+            <div class="right"> {{data.boys |text}}</div>
         </div>
         <div class="line">
-            <div class="left">girls:</div>
-            <div class="right"> {{data.girls}}</div>
+            <div class="left">{{'girls'|text}}:</div>
+            <div class="right"> {{data.girls |text}}</div>
         </div>
         <div class="line">
-            <div class="left">pwd:</div>
-            <div class="right"> {{data.pwd}}</div>
+            <div class="left">{{'pwd'|text}}:</div>
+            <div class="right"> {{data.pwd |text}}</div>
         </div>
         <div class="line">
-            <div class="left">individual:</div>
-            <div class="right"> {{data.individual}}</div>
+            <div class="left">{{'individual'|text}}:</div>
+            <div class="right"> {{data.individual |text}}</div>
         </div>
 
     </div>
