--- a/src/app/home/reports/provide-multi-sectoral/provide-multi-sectoral.component.html
+++ b/src/app/home/reports/provide-multi-sectoral/provide-multi-sectoral.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-<h1>Provide multi sectoral assistance project</h1>
+<h1>{{'Provide multi sectoral assistance project'| text}}</h1>
     
 </div>
 <div class="wrappar">
