--- a/src/app/home/reports/reports.component.html
+++ b/src/app/home/reports/reports.component.html
@@ -1,6 +1,6 @@
 <div class="header">
     <img src="/assets/img/report.png" alt="">
-    <div class="title">Reports</div>
+    <div class="title">{{'Reports' | text}}</div>
     <button class="back" (click)="back()">
         <mat-icon>
             keyboard_backspace
@@ -17,7 +17,7 @@
         </div>
     </div>
     <button class="normal-btn" *ngFor="let manual of manuals" (mousedown)="navTo(manual.url)">
-        {{manual.name}}
+        {{manual.name | text}}
     </button>
 </div>
 <div class="white-space"></div>
