--- a/src/app/choose-camp/choose-camp.component.html
+++ b/src/app/choose-camp/choose-camp.component.html
@@ -1,3 +1,3 @@
-<h1>Choose your camp</h1>
+<h1>{{'Choose your camp'|text}}</h1>
 <button class="btn btn-accept" *ngFor="let camp of camps" (mousedown)="setCamp(camp._id)">{{camp.name}}</button>
 <button class="btn btn-accept" *ngIf="!camps.length" (mousedown)="setCamp('default')">default camp</button>
