--- a/src/app/choose-lanuage/choose-lanuage.component.html
+++ b/src/app/choose-lanuage/choose-lanuage.component.html
@@ -1,3 +1,3 @@
-<h1>Choose your language</h1>
-<button class="btn btn-accept" (mousedown)="changeLang('en')">English</button>
+<h1>{{'Choose your language'|text}}</h1>
+<button class="btn btn-accept" (mousedown)="changeLang('en')">{{'English'|text}}</button>
 <button class="btn btn-accept" (mousedown)="changeLang('ar')">العربية</button>
