--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -1,6 +1,6 @@
 <div class="header">
     <img src="/assets/img/report.png" alt="">
-    <div class="title">About</div>
+    <div class="title">{{'About'|text}}</div>
     <button class="back" (click)="back()">
         <mat-icon>
             keyboard_backspace
@@ -13,16 +13,16 @@
     </div>
     <div class="innerBtns">
         <button class="normal-btn" (mousedown)="navTo('map')">
-            Camp map
+            {{'Camp map'| text}}
         </button>
         <button class="normal-btn" (mousedown)="navTo('')">
-            Sectors and services
+            {{'Sectors and services'|text}}
         </button>
         <button class="normal-btn" (mousedown)="navTo('')">
-            Contact camp management
+            {{'Contact camp management'|text}}
         </button>
         <button class="normal-btn" (mousedown)="navTo('')">
-            Camp location
+            {{'Camp location'|text}}
         </button>
     </div>
 </div>
