--- a/src/app/home/awareness/awareness.component.html
+++ b/src/app/home/awareness/awareness.component.html
@@ -1,6 +1,6 @@
 <div class="header">
     <img src="/assets/img/awareness.png" alt="">
-    <div class="title">Awareness</div>
+    <div class="title">{{'Awareness'|text}}</div>
     <button class="back" (click)="back()">
         <mat-icon>
             keyboard_backspace
@@ -9,7 +9,7 @@
 </div>
 <div class="btns">
     <button class="normal-btn" *ngFor="let manual of manuals" (click)="navTo(manual.url)">
-        {{manual.name}}
+        {{manual.name | text}}
     </button>
 </div>
 <div class="white-space"></div>
