--- a/src/app/home/bens/bens.component.html
+++ b/src/app/home/bens/bens.component.html
@@ -1,6 +1,6 @@
 <div class="header">
     <img src="/assets/img/beneficiary.png" alt="">
-    <div class="title">BENs</div>
+    <div class="title">{{'BENs'|text}}</div>
     <button class="back" (click)="back()">
         <mat-icon>
             keyboard_backspace
@@ -10,10 +10,10 @@
 <div class="btns">
     <ng-container *ngFor="let btn of btns">
         <button class="normal-btn" *ngIf="btn.context" (click)="navTo(btn.context)">
-            {{btn.name}}
+            {{btn.name | text}}
         </button>
         <button class="normal-btn" *ngIf="btn.url" (click)="navToUrl(btn.url)">
-            {{btn.name}}
+            {{btn.name | text}}
         </button>
     </ng-container>
 </div>
