--- a/src/app/home/bens/health-care/health-care.component.html
+++ b/src/app/home/bens/health-care/health-care.component.html
@@ -1,6 +1,6 @@
 <div class="header">
     <img src="/assets/img/healthcare.png" alt="">
-    <div class="title">Health Care</div>
+    <div class="title">{{'Health Care'|text}}</div>
     <button class="back" (click)="back()">
         <mat-icon>
             keyboard_backspace
@@ -17,7 +17,7 @@
         </div>
     </div>
     <button [@simpleFadeAnimation] class="normal-btn" *ngFor="let btn of btns" (mousedown)="navTo(btn.url)">
-        {{btn.name}}
+        {{btn.name | text}}
     </button>
 </div>
 <div class="white-space"></div>
