--- a/src/app/home/bens/learning-and-training/learning-and-training.component.html
+++ b/src/app/home/bens/learning-and-training/learning-and-training.component.html
@@ -1,6 +1,6 @@
 <div class="header">
     <img src="/assets/img/healthcare.png" alt="">
-    <div class="title">learning and training</div>
+    <div class="title">{{'learning and training'|text}}</div>
     <button class="back" (click)="back()">
         <mat-icon>
             keyboard_backspace
@@ -9,7 +9,7 @@
 </div>
 <div class="btns">
     <button class="normal-btn" *ngFor="let btn of btns" routerLink="{{btn.url}}">
-        {{btn.name}}
+        {{btn.name | text}}
     </button>
 </div>
 <div class="white-space"></div>
