--- a/src/app/home/reports/provide-multi-sectoral/provide-multi-sectoral.component.html
+++ b/src/app/home/reports/provide-multi-sectoral/provide-multi-sectoral.component.html
@@ -5,24 +5,24 @@
 <div class="wrappar">
     <div class="details" *ngFor="let item of data">
         <div class="line">
-            <div class="left">governorate:</div>
-            <div class="right"> {{item.governorate}}</div>
+            <div class="left">{{'governorate'|text}}:</div>
+            <div class="right"> {{item.governorate | text}}</div>
         </div>
         <div class="line">
-            <div class="left">district:</div>
-            <div class="right"> {{item.district}}</div>
+            <div class="left">{{'district' | text}}:</div>
+            <div class="right"> {{item.district | text}}</div>
         </div>
         <div class="line">
-            <div class="left">subsdistrict:</div>
-            <div class="right"> {{item.subsdistrict}}</div>
+            <div class="left">{{'subsdistrict'|text}}:</div>
+            <div class="right"> {{item.subsdistrict | text}}</div>
         </div>
         <div class="line">
-            <div class="left">community:</div>
-            <div class="right"> {{item.community}}</div>
+            <div class="left">{{'community'|text}}:</div>
+            <div class="right"> {{item.community | text}}</div>
         </div>
         <div class="line">
-            <div class="left">site:</div>
-            <div class="right"> {{item.site}}</div>
+            <div class="left">{{'site'|text}}:</div>
+            <div class="right"> {{item.site | text}}</div>
         </div>
 
     </div>
