fix: typo error

--- a/src/app/home/complaints/complaints.component.html
+++ b/src/app/home/complaints/complaints.component.html
@@ -20,7 +20,7 @@
         </a>
         <button class="normal-btn" (mousedown)="navTo('complaint-form')">
             <img class="icon" src="/assets/icons/complaint.png" alt="">
-            <div class="text">{{'Complaint form'text}}</div>
+            <div class="text">{{'Complaint form'|text}}</div>
         </button>
         <a href="whatsapp://send?phone=+905317381053" class="normal-btn">
             <img class="icon" src="/assets/icons/whatsapp.png" alt="">
