--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,7 @@
-<img src="/assets/general/Watan-logo.png" alt="" width="200px">
+<img src="/assets/img/appicon.png" alt="" width="200px">
+<div class="back" >
+    <img src="/assets/general/Watan-logo.png" alt="" width="40px">
+</div>
 <div class="main-content">
     <div class="menu-btn" (mousedown)="goTo('awareness')">
         <img src="/assets/img/awareness.png" alt="" class="icon">
@@ -20,5 +23,5 @@
         <img src="/assets/img/info.png" alt="" class="icon">
         <p>{{'About Watan'|text}}</p>
     </div>
+    <div class="white-space"></div>
 </div>
-<div class="white-space"></div>
