--- a/src/app/home/about/about.component.scss
+++ b/src/app/home/about/about.component.scss
@@ -4,12 +4,8 @@
   justify-content: flex-start;
   align-items: center;
   font-size: 2em;
-  color: var(--color-light);
-  background: linear-gradient(
-    107deg,
-    var(--color-primary),
-    var(--color-secondry)
-  );
+  color: var(--color-primary);
+  background:#DEDEE4;
 }
 
 .header {
@@ -30,7 +26,7 @@
   background-color: var(--color-secondry);
   border-radius: 50%;
   position: absolute;
-  top: 168px;
+  top: 137px;
   left: 5px;
   font-size: 0.6em !important;
   color: var(--color-light);
@@ -44,7 +40,7 @@
   }
 }
 .btns {
-  box-shadow: 0 -1px 5px var(--color-primary);
+  box-shadow: 0 -1px 5px #a1a1a1;
   width: 100%;
   display: flex;
   height: 100%;
