--- a/src/app/home/bens/bens.component.scss
+++ b/src/app/home/bens/bens.component.scss
@@ -4,8 +4,8 @@
     justify-content: flex-start;
     align-items: center;
     font-size: 2em;
-    color: var(--color-light);
-    background: linear-gradient(107deg, var(--color-primary), var(--color-secondry));
+    color: var(--color-primary);
+    background: #DEDEE4;
 
 }
 
@@ -29,7 +29,7 @@
     background-color: var(--color-secondry);
     border-radius: 50%;
     position: absolute;
-    top: 145px;
+    top: 134px;
     left: 5px;
     font-size: 0.6em !important;
     color: var(--color-light);
@@ -50,7 +50,7 @@
 }
 
 .btns {
-    box-shadow: 0 -1px 5px var(--color-primary);
+box-shadow: 0 -1px 5px #a1a1a1;
     width: 100%;
     display: flex;
     height: calc(100vh - 150px);
