--- a/src/app/home/bens/learning-and-training/learning-and-training.component.scss
+++ b/src/app/home/bens/learning-and-training/learning-and-training.component.scss
@@ -4,8 +4,8 @@
     justify-content: flex-start;
     align-items: center;
     font-size: 2em;
-    color: var(--color-light);
-    background: linear-gradient(107deg, var(--color-primary), var(--color-secondry));
+    color: var(--color-primary);
+    background: #DEDEE4;
 
 }
 
@@ -48,7 +48,7 @@
 }
 
 .btns {
-    box-shadow: 0 -1px 5px var(--color-primary);
+box-shadow: 0 -1px 5px #a1a1a1;
     width: 100%;
     display: flex;
     height: 100%;
