--- a/src/app/home/reports/provide-multi-sectoral/provide-multi-sectoral.component.scss
+++ b/src/app/home/reports/provide-multi-sectoral/provide-multi-sectoral.component.scss
@@ -4,8 +4,8 @@
     justify-content: flex-start;
     align-items: center;
     font-size: 2em;
-    color: var(--color-light);
-    background: linear-gradient(107deg, var(--color-primary), var(--color-secondry));
+    color: var(--color-primary);
+    background: #DEDEE4;
 
 }
 
@@ -37,6 +37,7 @@
     align-items: center;
     gap: 20px;
 
+    box-shadow: 0 -1px 5px #a1a1a1;
 
     .details {
         display: flex;
