--- a/src/app/home/reports/reports.component.scss
+++ b/src/app/home/reports/reports.component.scss
@@ -4,8 +4,8 @@
     justify-content: flex-start;
     align-items: center;
     font-size: 2em;
-    color: var(--color-light);
-    background: linear-gradient(107deg,var(--color-primary), var(--color-secondry));
+    color: var(--color-primary);
+    background: #DEDEE4;
 
 }
 
@@ -28,7 +28,7 @@
     background-color: var(--color-secondry);
     border-radius: 50%;
     position: absolute;
-    top: 145px;
+    top: 138px;
     left: 5px;
     font-size: 0.6em !important;
     color: var(--color-light);
@@ -43,7 +43,7 @@
     }
 }
 .btns {
-    box-shadow: 0 -1px 5px var(--color-primary);
+box-shadow: 0 -1px 5px #a1a1a1;
     width: 100%;
     display: flex;
     height: 100%;
