fix: sign in /sign up

--- a/src/app/home/complaints/complaints.component.html
+++ b/src/app/home/complaints/complaints.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-    <img src="/assets/icons/complaint.png" alt="">
+    <img src="/assets/img/complaints.png" alt="">
     <div class="title">{{'Complaints'|text}}</div>
     <button class="back" (click)="back()">
         <mat-icon>
