--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,4 +1,4 @@
-<img src="/assets/general/Watan-logo.png" alt="" width="200px">
+<img src="/assets/img/appicon.png" alt="" width="200px">
 <form autocomplete="off" (ngSubmit)="onSubmit()" #f="ngForm">
     <div class="input-holder block">
         <input type="text" id="userName" name="userName" onfocus="this.removeAttribute('readonly');" readonly   placeholder="{{'User name'| text}}" [(ngModel)]="userName">
