--- a/src/app/home/complaints/complaints.component.scss
+++ b/src/app/home/complaints/complaints.component.scss
@@ -5,7 +5,7 @@
     align-items: center;
     font-size: 2em;
     background: var(--color-warning);
-    color: var(--color-light);
+    color: var(--color-primary);
 }
 
 .header {
