--- a/src/app/sign-in/sign-in.component.scss
+++ b/src/app/sign-in/sign-in.component.scss
@@ -1,13 +1,10 @@
 :host {
-  background-image: linear-gradient(
-    60deg,
-    var(--color-primary),
-    var(--color-secondry)
-  );
+  background: linear-gradient(115deg,#00375F, #00569D);
   mix-blend-mode: normal;
-  display: grid;
-  place-content: center;
+  display: flex;
   gap: 25px;
+  align-items: center;
+  justify-content: center;
 }
 
 form {
@@ -17,11 +14,7 @@ form {
   .input-holder {
     background-color: white;
   }
-  .btn {
-    font-weight: bold;
-    max-width: 60px;
-  }
-
+ 
   .btns {
     display: grid;
     width: 100%;
@@ -29,7 +22,6 @@ form {
     justify-items: center;
     button {
       max-width: none;
-      width: 100%;
     }
     a {
       color: var(--color-secondry);
@@ -41,4 +33,10 @@ p {
   color: var(--color-secondry);
   text-align: center;
   margin: 0;
+}
+.btn{
+  background-color: #FFFFFF;
+    color: var(--color-primary);
+    min-width: 100px;
+    max-width: 100px;
 }
