--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,5 +1,6 @@
-<img src="/assets/general/Watan-logo.png" alt="" width="180px">
+<img src="/assets/img/appicon.png" alt="" width="180px">
 <form autocomplete="off" #f="ngForm" (ngSubmit)="onSubmit($event)">
+    
     <div class="select"  >
         <label>{{'Role'|text}}:</label>
         <select name="role" [(ngModel)]="form.role">
