fix: sgin in / sign up

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -67,7 +67,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-width: 200px;
+    min-width: 60vw;
+    min-width: 60dvw;
     min-height: 60px;
     border-radius: 20px;
     background-color: #FAFAFA;
