--- a/src/app/sign-in/sign-in.component.scss
+++ b/src/app/sign-in/sign-in.component.scss
@@ -13,6 +13,9 @@ form {
   place-content: center;
   .input-holder {
     background-color: white;
+    input{
+      min-width: 260px;
+    }
   }
  
   .btns {
