--- a/src/app/sign-up/sign-up.component.scss
+++ b/src/app/sign-up/sign-up.component.scss
@@ -1,9 +1,10 @@
+
 :host {
   background: linear-gradient(115deg, #00375F, #00569D);
   mix-blend-mode: normal;
   display: flex;
   /* place-content: center; */
-  gap: 25px;
+  gap: 20px;
   height: 100%;
   /* justify-items: center; */
   align-items: center;
@@ -21,12 +22,15 @@ form {
   }
 
   .select {
+    .label{
+      display: none;
+    }
     display: flex;
     justify-content: space-between;
     align-items: center;
 color: white;
     select {
-      min-width: 168px;
+      min-width: 250px;
       min-height: 30px;
       border-radius: 5px;
       color: var(--color-primary);
@@ -34,7 +38,7 @@ color: white;
   }
 
   display: grid;
-  gap: 8px;
+  gap: 12px;
   place-content: center;
 
   .btn {
@@ -105,4 +109,7 @@ select:focus-visible{
   border: 0;
 }
 
+
+
+// Start | for demo
 
