--- a/src/app/sign-up/sign-up.component.scss
+++ b/src/app/sign-up/sign-up.component.scss
@@ -1,4 +1,3 @@
-
 :host {
   background: linear-gradient(115deg, #00375F, #00569D);
   mix-blend-mode: normal;
@@ -10,6 +9,7 @@
   align-items: center;
   justify-content: center;
 }
+
 form {
   transition: all 200ms;
 
@@ -22,13 +22,15 @@ form {
   }
 
   .select {
-    .label{
+    .label {
       display: none;
     }
+
     display: flex;
     justify-content: space-between;
     align-items: center;
-color: white;
+    color: white;
+
     select {
       min-width: 250px;
       min-height: 30px;
@@ -41,16 +43,30 @@ color: white;
   gap: 12px;
   place-content: center;
 
-  .btn {
-    margin-top: 10px;
-    font-weight: bold;
-    background-color: #FFFFFF;
-    color: var(--color-primary);
+
+  .formBtns {
+    display: flex;
+    gap: 5px;
+
+    .btn {
+      margin-top: 10px;
+      font-weight: bold;
+      width: 100%;
+      background-color: #FFFFFF;
+      color: var(--color-primary);
+    }
+    .sign-in{
+      border-radius: 10px 0 0 10px;
+    }
+    .back{
+      border-radius: 0 10px 10px 0;
+    }
   }
 
   .input-holder {
     background: white;
-    input{
+
+    input {
       min-width: 250px;
     }
   }
@@ -60,7 +76,8 @@ color: white;
     flex-direction: column;
     width: 100%;
     align-items: center;
-    button{
+
+    button {
       width: 100%;
     }
   }
@@ -104,7 +121,8 @@ p {
     display: none;
   }
 }
-select:focus-visible{
+
+select:focus-visible {
   outline: 0;
   border: 0;
 }
@@ -112,4 +130,3 @@ select:focus-visible{
 
 
 // Start | for demo
-
