--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -91,3 +91,22 @@ ion-menu.ios ion-item ion-icon {
 ion-menu.ios ion-item.selected ion-icon {
   color: var(--ion-color-primary);
 }
+.camp{
+  padding: 4px;
+  height: 30px;
+  display: flex;
+  gap: 5px;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color-primary);
+  border: 1px solid var(--color-secondry);
+  color: white;
+  position: absolute;
+  top: 10px;
+  left: 0;
+  border-radius: 0 10px 10px 0;
+  img{
+max-width: 20px;
+height: auto;
+  }
+}
